util/rules.v4
# Generated by iptables-save v1.8.7 on Mon Oct 21 13:53:04 2024
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:ufw-blocklist-forward - [0:0]
:ufw-blocklist-input - [0:0]
:ufw-blocklist-output - [0:0]
-A INPUT -m set --match-set ufw-blocklist-ipsum src -j ufw-blocklist-input
-A FORWARD -m set --match-set ufw-blocklist-ipsum src -j ufw-blocklist-forward
-A FORWARD -m set --match-set ufw-blocklist-ipsum dst -j ufw-blocklist-forward
-A OUTPUT -m set --match-set ufw-blocklist-ipsum dst -j ufw-blocklist-output
-A ufw-blocklist-forward -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "zDROP ufw-blocklist-forward: "
-A ufw-blocklist-forward -j DROP
-A ufw-blocklist-input -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "zDROP ufw-blocklist-input: "
-A ufw-blocklist-input -j DROP
-A ufw-blocklist-output -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "zDROP ufw-blocklist-output: "
-A ufw-blocklist-output -j DROP
COMMIT
# Completed on Mon Oct 21 13:53:04 2024
