util/rules.v6
# Generated by ip6tables-save v1.8.7 on Mon Sep 23 12:58:21 2024
*filter
:INPUT ACCEPT [2249:1289060]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1034:121909]
:ufw-blocklist-forward - [0:0]
:ufw-blocklist-input - [0:0]
:ufw-blocklist-output - [0:0]
-A INPUT -m set --match-set ufw-blocklist6-ipsum src -j ufw-blocklist-input
-A FORWARD -m set --match-set ufw-blocklist6-ipsum dst -j ufw-blocklist-forward
-A OUTPUT -m set --match-set ufw-blocklist6-ipsum dst -j ufw-blocklist-output
-A ufw-blocklist-forward -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "DROP ufw-blocklist-input: "
-A ufw-blocklist-forward -j DROP
-A ufw-blocklist-input -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "DROP ufw-blocklist-input: "
-A ufw-blocklist-input -j DROP
-A ufw-blocklist-output -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "DROP ufw-blocklist-input: "
-A ufw-blocklist-output -j DROP
COMMIT
# Completed on Mon Sep 23 12:58:21 2024
